--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -10,6 +10,9 @@ services:
   basketdb:
     image: redis:alpine
 
+  portainer:
+    image: portainer/portainer-ce
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
@@ -24,3 +27,4 @@ services:
 
 volumes:
   mongo_data:
+  portainer_data:
