Added Infrastructure services registrations

--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;Trusted_Connection=True;"
+  },
+  "EmailSettings": {
+    "FromAddress": "test@test.com",
+    "ApiKey": "",
+    "FromName": "Test"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
