--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrderingConnectionString": "Server=localhost;Database=OrderDb;Trusted_Connection=True;"
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;"
   },
   "EmailSettings": {
     "FromAddress": "test@test.com",
