--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -48,6 +48,15 @@ services:
     volumes:
       - pgadmin_data:/root/.pgadmin
 
+  orderdb:
+    container_name: orderdb
+    environment:
+        SA_PASSWORD: "SwN12345678"
+        ACCEPT_EULA: "Y"
+    restart: always
+    ports:
+        - "1434:1433"
+
   portainer:
     container_name: portainer
     restart: always
